tests/ui/rfcs/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0015]: cannot call non-const fn `<() as Tr>::a` in constant functions
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:9:12
   |
LL |         ().a()
   |            ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
